<resources>
    <string name="about_android">%1$s Android app</string>
    <string name="about_version">version %1$s</string>
    <string name="actionbar_sync">Refresh account</string>
    <string name="actionbar_upload">Upload</string>
    <string name="actionbar_upload_from_apps">Content from other apps</string>
    <string name="actionbar_upload_files">Files</string>
    <string name="actionbar_open_with">Open with</string>
    <string name="actionbar_mkdir">New folder</string>
    <string name="actionbar_settings">Settings</string>
    <string name="actionbar_see_details">Details</string>
    <string name="actionbar_send_file">Send</string>
    <string name="actionbar_sort">Sort</string>
    <string name="actionbar_descending">Descending</string>
    <string name="actionbar_sort_title">Sort by</string>
    <string name="actionbar_sort_by_name">A-Z</string>
    <string name="actionbar_sort_by_date">Oldest - Newest</string>
    <string name="actionbar_sort_by_size">Smallest - Largest</string>
    <string name="drawer_item_all_files">All files</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_uploads_list">Uploads</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_loading_quota">Loading quota</string>
    <string name="drawer_quota">%1$s of %2$s used (%3$s %%)</string>
    <string name="drawer_unavailable_free_storage">%1$s in use</string>
    <string name="drawer_unavailable_used_storage">No storage usage information available</string>
    <string name="drawer_feedback">Feedback</string>
    <string name="drawer_help">Help</string>
    <string name="prefs_category_general">General</string>
    <string name="prefs_category_more">More</string>
    <string name="prefs_category_security">Security</string>
    <string name="prefs_accounts">Accounts</string>
    <string name="prefs_manage_accounts">Manage accounts</string>
    <string name="prefs_passcode">Passcode lock</string>
    <string name="prefs_fingerprint">Fingerprint lock</string>
    <string name="prefs_fingerprint_summary">Enable passcode or pattern lock to enable this option</string>
    <string name="prefs_camera_picture_upload">Picture uploads</string>
    <string name="prefs_camera_picture_upload_summary">Automatically upload pictures taken by camera</string>
    <string name="prefs_camera_video_upload">Video uploads</string>
    <string name="prefs_camera_video_upload_summary">Automatically upload videos recorded by camera</string>
    <string name="prefs_log_title">Enable logging</string>
    <string name="prefs_log_summary">This is used to log problems</string>
    <string name="prefs_log_title_history">Logging history</string>
    <string name="prefs_log_summary_history">This shows the recorded logs</string>
    <string name="prefs_log_delete_history_button">Delete history</string>
    <string name="prefs_help">Help</string>
    <string name="prefs_recommend">Recommend to a friend</string>
    <string name="prefs_feedback">Feedback</string>
    <string name="prefs_imprint">Imprint</string>
    <string name="prefs_remember_last_share_location">Remember share location</string>
    <string name="prefs_remember_last_upload_location_summary">Remember last share upload location</string>
    <string name="prefs_pattern"> Pattern lock </string>
    <string name="pattern_enter_pattern">Please enter your pattern</string>
    <string name="pattern_configure_pattern">Enter your pattern</string>
    <string name="pattern_remove_pattern">Remove your pattern</string>
    <string name="pattern_incorrect_pattern">Incorrect pattern</string>
    <string name="pattern_reenter_pattern">Please re-enter your pattern</string>
    <string name="pattern_not_same_pattern">The patterns are not same</string>
    <string name="pattern_stored">Pattern Stored</string>
    <string name="pattern_removed">Pattern Removed</string>
    <string name="pattern_already_set">Pattern and passcode locks cannot be enabled at the same time, please disable pattern first</string>
    <string name="passcode_already_set">Pattern and passcode locks cannot be enabled at the same time, please disable passcode first</string>
    <string name="pattern_no_longer_required">The pattern will not be asked anymore</string>
    <string name="pattern_configure_your_pattern_explanation">The pattern will be requested every time the app is started</string>
    <string name="illegal_argument_exception_message">A valid ACTION is needed in the Intent passed to</string>
    <string name="recommend_subject">"Try %1$s on your smartphone!"</string>
    <string name="recommend_text">"I want to invite you to use %1$s on your smartphone!\nDownload here: %2$s"</string>
    <string name="auth_failure_snackbar">Authentication failed</string>
    <string name="auth_failure_snackbar_action">Change account</string>
    <string name="auth_check_server">Check server</string>
    <string name="auth_host_url">Server address https://…</string>
    <string name="auth_username">Username</string>
    <string name="auth_password">Password</string>
    <string name="auth_register">New to %1$s?</string>
    <string name="sync_string_files">Files</string>
    <string name="setup_btn_connect">Connect</string>
    <string name="uploader_btn_upload_text">Upload</string>
    <string name="uploader_top_message">Choose upload folder</string>
    <string name="uploader_wrn_no_account_title">No account found</string>
    <string name="uploader_wrn_no_account_text">There are no %1$s accounts on your device. Please set up an account first.</string>
    <string name="uploader_wrn_no_account_setup_btn_text">Setup</string>
    <string name="uploader_wrn_no_account_quit_btn_text">Quit</string>
    <string name="uploader_error_title_no_file_to_upload">No file to upload</string>
    <string name="uploader_error_message_received_piece_of_text">%1$s cannot upload a piece of text as a file.</string>
    <string name="uploader_error_message_no_file_to_upload">Received data do not include any valid file.</string>
    <string name="uploader_error_title_file_cannot_be_uploaded">File cannot be uploaded</string>
    <string name="uploader_error_message_read_permission_not_granted">%1$s is not allowed to read a received file</string>
    <string name="uploader_error_message_source_file_not_found">File to upload was not found in its location. Please check whether the file exists.</string>
    <string name="uploader_error_message_source_file_not_copied">An error occurred while copying the file to a temporary folder. Please try to send again.</string>
    <string name="file_list_seconds_ago">seconds ago</string>
    <string name="file_list_empty">Nothing in here. Upload something!</string>
    <string name="file_list_loading">Loading&#8230;</string>
    <string name="file_list_no_app_for_file_type">No app found for file type</string>
    <string name="local_file_list_empty">There are no files in this folder.</string>
    <string name="local_file_list_empty_just_folders">There are no folders in this folder.</string>
    <string name="upload_list_empty">No uploads available.</string>
    <string name="file_list_folder">folder</string>
    <string name="file_list_folders">folders</string>
    <string name="file_list_file">file</string>
    <string name="file_list_files">files</string>
    <string name="filedetails_select_file">Tap on a file to display additional information.</string>
    <string name="upload_to">Upload to %1$s</string>
    <string name="upload_files_title"> Files </string>
    <string name="filedetails_size">Size:</string>
    <string name="filedetails_type">Type:</string>
    <string name="filedetails_created">Created:</string>
    <string name="filedetails_modified">Modified:</string>
    <string name="filedetails_download">Download</string>
    <string name="filedetails_sync_file">Synchronize</string>
    <string name="filedetails_renamed_in_upload_msg">File was renamed to %1$s during upload</string>
    <string name="list_layout">List layout</string>
    <string name="action_share">Share</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_ok">OK</string>
    <string name="common_remove_upload">Remove upload</string>
    <string name="common_retry_upload">Retry upload</string>
    <string name="common_cancel_sync">Cancel sync</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_back">Back</string>
    <string name="common_save_exit">Save &amp; exit</string>
    <string name="common_error">Error</string>
    <string name="common_loading">Loading &#8230;</string>
    <string name="common_unknown">unknown</string>
    <string name="common_error_unknown">Unknown error</string>
    <string name="common_pending">Pending</string>
    <string name="about_title">About</string>
    <string name="change_password">Change password</string>
    <string name="delete_account">Remove account</string>
    <string name="create_account">Create account</string>
    <string name="upload_chooser_title">Upload from &#8230;</string>
    <string name="uploader_info_dirname">Folder name</string>
    <string name="uploader_upload_in_progress_ticker">Uploading &#8230;</string>
    <string name="uploader_upload_in_progress_content">%1$d%% Uploading %2$s</string>
    <string name="uploader_upload_succeeded_ticker">Upload succeeded</string>
    <string name="uploader_upload_succeeded_content_single">%1$s uploaded</string>
    <string name="uploader_upload_failed_ticker">Upload failed</string>
    <string name="uploader_upload_failed_content_single">Upload of %1$s could not be completed</string>
    <string name="uploader_upload_failed_credentials_error">Upload failed, you need to log in again</string>
    <string name="uploader_upload_failed_ssl_certificate_not_trusted">Server certificate is not trusted</string>
    <string name="uploader_upload_text_dialog_title">Insert a name for the new file</string>
    <string name="uploader_upload_text_dialog_filename_error_empty">Filename must not be empty</string>
    <string name="uploader_upload_text_dialog_filename_error_length_max">Filename must not be more than %d characters</string>
    <string name="uploader_upload_text_filename_hint">Filename</string>
    <string name="ssl_certificate_not_trusted">Server certificate is not trusted</string>
    <string name="uploads_view_title">Uploads</string>
    <string name="uploads_view_group_current_uploads">Current</string>
    <string name="uploads_view_group_failed_uploads">Failed (tap to retry)</string>
    <string name="uploads_view_group_finished_uploads">Uploaded</string>
    <string name="uploads_view_group_file_count">%d Files</string>
    <string name="uploads_view_group_file_count_single">%d File</string>
    <string name="uploads_view_upload_status_succeeded">Completed</string>
    <string name="uploads_view_upload_status_cancelled">Cancelled</string>
    <string name="uploads_view_upload_status_paused">Paused</string>
    <string name="uploads_view_upload_status_failed_connection_error">Connection error</string>
    <string name="uploads_view_upload_status_failed_retry">Upload will be retried shortly</string>
    <string name="pass_code_enter_pass_code">Please insert your passcode</string>
    <string name="fingerprint_confirm">Confirm your fingerprint to continue</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="auth_testing_connection">Testing connection</string>
    <string name="auth_unauthorized">Wrong username or password</string>
    <string name="auth_expired_basic_auth_toast">Please enter the current password</string>
    <string name="auth_refresh_button">Refresh connection</string>
    <string name="auth_host_address">Server address</string>
    <string name="action_switch_grid_view">Grid view</string>
</resources>