<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_sort"
        android:orderInCategory="2"
        android:title="@string/actionbar_sort">
        <menu
            android:id="@+id/sort_menu">

            <group
                android:id="@+id/sort_group"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_by_name"
                    android:title="@string/actionbar_sort_by_name"
                    android:orderInCategory="2"/>
                <item
                    android:id="@+id/action_sort_by_date"
                    android:title="@string/actionbar_sort_by_date"
                    android:orderInCategory="2"/>
                <item
                    android:id="@+id/action_sort_by_size"
                    android:title="@string/actionbar_sort_by_size"
                    android:orderInCategory="2"/>
            </group>

            <item
                android:id="@+id/action_sort_descending"
                android:orderInCategory="3"
                android:title="@string/actionbar_descending"
                android:checkable="true"
                android:checked="false"/>

        </menu>
    </item>
</menu>