<?xml version="1.0" encoding="utf-8"?>
<!--
  ownCloud Android client application

  Copyright (C) 2012  Bartek Przybylski
  Copyright (C) 2016 ownCloud GmbH.

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License version 2,
  as published by the Free Software Foundation.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/login_background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_background_image"
        android:visibility="invisible"/>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:fillViewport="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="40dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/centeredRefreshButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/auth_check_server"
                android:text="@string/auth_check_server"
                android:theme="@style/Button.Secondary"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/instructions_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/auth_expired_basic_auth_toast"
                android:text="@string/auth_expired_basic_auth_toast"
                android:textColor="@color/login_text_color"
                android:visibility="gone"/>

            <FrameLayout
                android:id="@+id/hostUrlFrame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                >

                <EditText
                    android:id="@+id/hostUrlInput"
                    style="@style/EditText.Authenticator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:contentDescription="@string/auth_host_address"
                    android:drawablePadding="5dp"
                    android:hint="@string/auth_host_url"
                    android:inputType="textUri"
                    android:paddingRight="55dp"
                    android:theme="@style/EditText.Authenticator">

                    <requestFocus/>
                </EditText>

                <ImageButton
                    android:id="@+id/embeddedRefreshButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="5dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/auth_refresh_button"
                    android:padding="0dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_action_refresh"
                    android:visibility="gone"/>
            </FrameLayout>

            <TextView
                android:id="@+id/server_status_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/auth_testing_connection"
                android:drawableLeft="@android:drawable/stat_notify_sync"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:minHeight="32dp"
                android:text="@string/auth_testing_connection"
                android:textColor="@color/login_text_color"/>

            <EditText
                android:id="@+id/account_username"
                style="@style/EditText.Authenticator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/auth_username"
                android:ems="10"
                android:hint="@string/auth_username"
                android:inputType="textNoSuggestions"
                android:theme="@style/EditText.Authenticator"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/account_password"
                style="@style/EditText.Authenticator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/auth_password"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/auth_password"
                android:inputType="textPassword"
                android:theme="@style/EditText.Authenticator"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/auth_status_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/auth_unauthorized"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:text="@string/auth_unauthorized"
                android:textColor="@color/login_text_color"
                android:visibility="gone"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/buttonOK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/setup_btn_login"
                android:text="@string/setup_btn_login"
                android:theme="@style/Button.Authenticator"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/welcome_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/auth_register"
                    android:gravity="center"
                    android:onClick="onRegisterClick"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/auth_register"
                    android:textColor="@color/login_text_color"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>